Fix hero image sizing on mobile

--- a/src/styles/page.module.scss
+++ b/src/styles/page.module.scss
@@ -22,8 +22,9 @@
 
 .hero {
   border-bottom: 1px solid $gray-lighter;
+  box-shadow: 1
   margin: -2.2rem auto 0 auto;
-  max-width: 80vw;
+  max-width: 90vw;
 
   @media (min-width: $tablet) {
     max-width: 740px;
